# confidential-transactions

./: Cargo.toml  README.md
account/: Cargo.toml
account/src/: account.rs  confidential_transaction.rs  lib.rs  ring_confidential_transaction.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  lib.rs  signature.rs
mlsag/: Cargo.toml
mlsag/src/: lib.rs  material.rs  mlsag.rs  signature.rs
test/confidential_transaction/: Cargo.toml
test/confidential_transaction/src/: main.rs
test/ring_confidential_transaction/: Cargo.toml
test/ring_confidential_transaction/src/: main.rs
token/: Cargo.toml
token/src/: lib.rs  prove.rs  token.rs
utils/: Cargo.toml
utils/src/: generator.rs  hash.rs  lib.rs  transcript.rs
