[package]
name = "ct_account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }
ct_crypto = {path = "../crypto"}
ct_token = {path = "../token"}
ct_utils = {path = "../utils"}
ct_mlsag = {path = "../mlsag"}